<resources>
    <string name="app_name">PRA1</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_find">FindActivity</string>

    <!--MENU LISTA DE PRODUCTOS    -->
    <string name="add">Añadir</string>

    <!-- ACTIVITY DETAIL  -->
    <string name="image_label">IMAGEN:</string>

    <!-- INSERT ACTIVITY -->
    <!--ACTIVITY INGRESAR NUEVO ITEM -->
    <string name="nombre">Nombre:</string>
    <string name="precio">Precio:</string>
    <string name="descripcion">Descripcion:</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>

    <string name="button_ingresar">Ingresar</string>
    <string name="button_imagen">Tomar Foto</string>
    <string name="etNombre">Ingrese el nombre</string>
    <string name="etPrecio">Ingrese el Precio</string>
    <string name="etDescripcion">Ingrese una descripción</string>
</resources>
